# common

./: .gitignore  Makefile.am  README.md  configure.ac  hexagon.hpp
db_model/: cyvasse-online.mwb
include/: enum_str.hpp  hexagon.hpp  make_unique.hpp  optional.hpp  server_message.hpp
include/cyvasse/: bearing_table.hpp  coordinate.hpp  fortress.hpp  hexagon.hpp  hexcoordinate.hpp  match.hpp  piece.hpp  piece_type.hpp  player.hpp  players_color.hpp  terrain.hpp  terrain_type.hpp
include/cyvdb/: config.hpp  match.hpp  match_manager.hpp  player.hpp  player_manager.hpp
include/cyvmath/: common.hpp  coordinate.hpp  enum_str.hpp  hexagon.hpp  match.hpp  piece.hpp  piece_type.hpp  player.hpp  players_color.hpp  rule_set_create.hpp  rule_sets.hpp
include/cyvmath/mikelepage/: README.md  bearing_table.hpp  common.hpp  coordinate.hpp  fortress.hpp  match.hpp  piece.hpp  player.hpp  terrain.hpp  terrain_type.hpp
include/cyvws/: chat_msg.hpp  common.hpp  createJson.hpp  create_json.hpp  game_msg.hpp  game_msg_action.hpp  init_comm.hpp  json_game_msg.hpp  json_game_msg.inl  json_game_msg.ipp  json_notification.hpp  json_server_reply.hpp  msg.hpp  msg_type.hpp  notification.hpp  notification_type.hpp  server_reply.hpp  server_request.hpp  server_request_action.hpp  user.hpp  user_type.hpp
include/deepcopy_smart_ptr/: unique_ptr.hpp
include/mikelepage/: match.hpp  piece.hpp
mikelepage/: match.hpp  piece.hpp
multiplayer message examples/: add fortress replacement tile.json  create game.json  join game.json  leave setup.json  move piece.json  promote piece.json  resign.json
src/: hexagon.hpp  players_color.cpp  rule_set_create.cpp
src/cyvasse/: bearing_table.cpp  coordinate.cpp  match.cpp  piece.cpp  player.cpp  players_color.cpp
src/cyvdb/: match_manager.cpp  player_manager.cpp
src/cyvmath/: coordinate.cpp  mikelepage-match.cpp  mikelepage-piece.cpp  mikelepage-player.cpp  piece.cpp  players_color.cpp  rule_set_create.cpp  rule_sets.cpp
src/cyvmath/mikelepage/: bearing_table.cpp  match.cpp  piece.cpp  player.cpp
src/cyvws/: create_json.cpp  json_game_msg.cpp  json_notification.cpp  json_server_reply.cpp
src/mikelepage/: bearing_table.cpp  match.cpp  piece.cpp  player.cpp  terrain.cpp  terrain_type.cpp
unit-tests/: Makefile.am  hexagon_test.cpp  hexagon_test.hpp  main.cpp
ws-msg-examples/: chatMsg-fromServer.json  chatMsg-toServer.json  chatMsg.json  chatMsgAck.json  gameMsgAck.json  gameMsgErr.json  listUpdateNotification.json  serverReplyErr.json
ws-msg-examples/gameMsg/: endTurn.json  move.json  moveCapture.json  promote.json  resign.json  setIsReady.json  setOpeningArray.json
ws-msg-examples/notification/: commError.json  listUpdate.json  userJoined.json  userLeft.json  usernameUpdate.json
ws-msg-examples/serverReply/: createGame-successful.json  createGame-unsuccessful.json  createGame.json  initComm-successful.json  initComm-unsuccessful.json  joinGame-setup.json  joinGame-started.json  joinGame-successful.json  joinGame.json  listOpenRandomGames.json  listRunningPublicGames.json  setUsername.json  subscrGameListUpdates.json  unsubscrGameListUpdates.json
ws-msg-examples/serverRequest/: createGame.json  initComm.json  joinGame.json  listOpenRandomGames.json  listRunningPublicGames.json  setUsername.json  subscrGameListUpdates.json  unsubscrGameListUpdates.json
